<resources>
    <string name="app_name">setting</string>

    <string name="txt_loading">数据加载中...</string>
    <string name="txt_no_data">真的是什么都没有</string>
    <string name="txt_data_error_retry">获取数据失败，点击重试</string>
    <string name="tx_loading">数据努力加载中</string>
    <string name="txt_nonet_retry">网络连接不可用，点击重试</string>
    <string name="crop">裁剪</string>

    <string name="unknow_size">未知大小</string>

    <!--接口错误码统一处理-->
    <string name="retcode_default">无网络,网络出错</string>
    <string name="retcode_20001">20001对应的ErrorMsg</string>
    <string name="kairu_lib_net_error">网络异常,请重新加载</string>
    <string name="kairu_lib_refresh">刷新</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="to_expand_hint">展开↓</string>
    <string name="to_shrink_hint">收起↑</string>
    <string name="tv_no_content">内容消失了</string>
    <string name="auth_failure">登录过期,重新登录</string>
    <string name="GO_LOGIN">进行登录</string>
    <string name="loginout">退出登录</string>

    <string name="done">完成</string>
    <string name="cancel">取消</string>

    <string name="library_hint">Level G-W 滑动到最右侧高阶书架哦～</string>

    <string name="dialog_hint_relogin">您的账户在异地登录，请您重新登录。</string>

    <string name="sure">确定</string>

    <string name="hint_loadMore">加载更多…</string>


    <!--main-->
    <string name="home">首页</string>
    <string name="visual_security">可视安防</string>
    <string name="intelligent_home">智能家居</string>
    <string name="property_service">物业服务</string>
    <string name="market_service">服务市场</string>
    <string name="message_notify">消息通知</string>
    <string name="message_promote">促销活动</string>
    <string name="neighbor">邻里</string>
    <string name="setting">设置</string>
    <string name="press_again_exit">再按一次退出应用</string>
    <string name="font_s">font/%s.ttf</string>

    <!--智能家居-->
    <string name="all">全部</string>
    <string name="drawing_room">客厅</string>
    <string name="master_room">主卧</string>
    <string name="second_room">次卧</string>
    <string name="kitchen">厨房</string>
    <string name="washroom">洗手间</string>
    <string name="scene_choose">场景选择</string>
    <string name="family_experience_mode">当前为智能体验模式</string>
    <string name="mode_in_home">回家模式</string>
    <string name="opened">已开启</string>
    <string name="usually_equipment">常用设备</string>
    <string name="curtain">窗帘</string>
    <string name="all_equipment">全部设备</string>
    <string name="lighting_power">亮度</string>
    <string name="back">返回</string>


    <!--设置-->
    <string name="set_family_member">设置家庭成员</string>
    <string name="manager_home_card">管理首页卡片</string>
    <string name="set_lock_pic">设置锁屏图片</string>
    <string name="wifi_connection">wifi连接</string>
    <string name="allow_look_door_num">允许查看门牌号</string>
    <string name="check_update">检查更新</string>
    <string name="allow_look_door_num_desc">仅限与您同社区的住户查看</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_desc">缓存中不包含自动录制的门禁回放录像</string>
    <string name="add_family_member">添加家庭成员</string>
    <string name="please_input_member_phone">请输入成员手机号</string>
    <string name="invite">邀请</string>
    <string name="check_update_ing">正在检查更新...</string>
    <string name="find_new_version">发现新版本</string>
    <string name="now_update">立即更新</string>
    <string name="update_ing">正在更新</string>
    <string name="cache_clear_ed">缓存已清除</string>
    <string name="chat_is_developing">聊天功能正在开发中，敬请期待</string>

    <string name="look_details">查看详情</string>
    <string name="welcom_login">欢迎登录</string>
    <string name="phone">手机号</string>
    <string name="please_input_right_phone">请输入正确的手机号</string>
    <string name="login_hint_words_short">欢迎加入本社区，以家庭为单位开启智慧生活</string>
    <string name="login">登录</string>
    <string name="login_hint_words">欢迎加入本社区，以家庭为单位开启智慧生活</string>
    <string name="phone_error">手机号填写错误</string>


    <!--可视安防-->
    <string name="outside_machine">室外机</string>
    <string name="backyard">后院</string>
    <string name="ease_garth">东花院</string>
    <string name="park">停车场</string>
    <string name="sos">SOS</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>


    <!--首页-->
    <string name="Welcome_home">Welcome home</string>
    <string name="equipment_status">设备状态</string>
    <string name="mute">静音</string>
    <string name="full_screen">全屏</string>
    <string name="save">保存</string>
    <string name="refresh">刷新</string>
    <string name="play_recond">回放记录</string>
    <string name="complete">完成</string>
    <string name="edit">编辑</string>
    <string name="swich_live">切回直播</string>
    <string name="all_choose">全选</string>
    <string name="delete">删除</string>
    <string name="tenement_service">物业维修</string>
    <string name="now_subscribe">立即预约</string>
    <string name="input_phone_invite">输入成员手机号，一键邀请</string>
    <string name="send_invite">发送邀请</string>
    <string name="invite_manager">邀请管理</string>
    <string name="exception_status_info">异常状态详情</string>
    <string name="risk">风险</string>
    <string name="password">密码</string>
    <string name="verification_code">验证码</string>
    <string name="warning">预警</string>
    <string name="_empty"> </string>
    <string name="not_join">暂未接入</string>

    <!--format-->
    <string name="s_s">%1$s %2$s</string>
    <string name="add_shortcut_card">添加快捷卡片</string>
    <string name="added">已添加</string>
    <string name="unadd">未添加</string>


    <array name="arc_colors_default">
        <item>@color/colorAccent</item>
        <item>@color/colorAccent</item>
    </array>


    <!--消息通知-->

    <string name="all_msg">所有消息</string>
    <string name="wuye_notify">物业通知</string>
    <string name="connection_service">联系物业</string>
    <string name="shequ_notify">社区公告</string>
    <string name="app_notify">应用提醒</string>
    <string name="gov_notify">政务通知</string>
    <string name="order_notify">订单消息</string>
    <string name="readed">已读</string>
    <string name="unread">未读</string>
    <string name="i_know">我知道了</string>


    <!--服务-->
    <string name="my_service">我的服务</string>
    <string name="find_service">发现服务</string>
    <string name="group_buy_service">社区团购</string>
    <string name="order_service">我的订单</string>
    <string name="gov_service">政务服务</string>
    <string name="all_service">全部服务</string>
    <string name="feature_service">特色服务</string>
    <string name="around_service">周围服务</string>
    <string name="back_my_service">返回我的服务</string>
    <string name="add_buy_car">加入购物车</string>
    <string name="all_order">全部订单</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_send">待发货</string>
    <string name="wait_receive">待收货</string>
    <string name="order_received">已收货</string>
    <string name="order_expired">已过期</string>
    <string name="wait_evaluate">待评价</string>
    <string name="business_order">商务订单</string>
    <string name="team_order">团购订单</string>
    <string name="family_order">家庭订单</string>
    <string name="order_details">订单信息</string>
    <string name="now_pay">立即付款</string>
    <string name="order_delete_desc">订单删除后将无法找回，确认\n删除吗？</string>
    <string name="order_delete_ed">订单已删除</string>
    <string name="delete_order">删除订单</string>
    <string name="change_pay_type_please">请选择支付方式</string>
    <string name="cmb_pay">招行一网通支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="buy_car">购物车</string>
    <string name="receive_address">收货地址</string>
    <string name="subscribe">订阅</string>


    <!--物业-->
    <string name="propery_report_fix">报事报修</string>
    <string name="community_yellow_page">社区黄页</string>
    <string name="tel_select">电话查询</string>
    <string name="send_verify_code">发送验证码</string>


    <!--政务服务-->
    <string-array name="gov_service_data_explain">

        <item>人民政府办公厅主办网站</item>
        <item>政务服务一网通办</item>
        <item>国家行政机关</item>
        <item>迈进创新型中心城区</item>
        <item>多角度全方位阐释政策</item>
        <item>互联网+政务服务</item>
        <item>政府工作解读</item>
        <item>文化,创新,生态,和谐南山</item>

    </string-array>

    <string-array name="gov_service_data_name">

        <item>广东政务服务网</item>
        <item>南山区办事大厅</item>
        <item>深圳市政府</item>
        <item>南山区人民政府</item>
        <item>南山区政务要闻</item>
        <item>南山区政务服务</item>
        <item>南山区热点专题</item>
        <item>魅力南山</item>

    </string-array>

    <string-array name="gov_service_data_url">

        <item>http://www.gdzwfw.gov.cn/portal/index?region=440300</item>
        <item>http://www.gdzwfw.gov.cn/portal/index?region=440305</item>
        <item>http://www.sz.gov.cn/cn/</item>
        <item>http://www.szns.gov.cn/</item>
        <item>http://www.szns.gov.cn/zwyw/</item>
        <item>http://www.szns.gov.cn/bsfw/</item>
        <item>http://www.szns.gov.cn/ztzl/nsrdzt/index.htm</item>
        <item>http://www.szns.gov.cn/mlns</item>

    </string-array>

    <string-array name="gov_service_data_image">

        <item>file:///android_asset/icon_guangdong.png</item>
        <item>file:///android_asset/icon_nanshan.png</item>
        <item>file:///android_asset/icon_shenzhen.png</item>
        <item>file:///android_asset/icon_nanshanrenmin.png</item>
        <item>file:///android_asset/icon_nashanzhangwu.png</item>
        <item>file:///android_asset/icon_nanshanfuwu.png</item>
        <item>file:///android_asset/icon_nanshanredian.png</item>
        <item>file:///android_asset/icon_meilinanshan.png</item>

    </string-array>
</resources>
