<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/px450"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_radius_shape"
    android:gravity="center_horizontal"
    android:minHeight="@dimen/px224"
    android:orientation="vertical">


    <TextView
        android:id="@id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px48"
        android:textColor="@color/c3"
        android:textSize="@dimen/text32"
        tools:text="添加家庭成员" />

    <TextView
        android:id="@id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/c8"
        android:textSize="16sp"
        tools:text="@string/order_delete_desc" />

    <View
        style="@style/ItemLineStyle"
        android:layout_marginTop="@dimen/px50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px80"
        android:orientation="horizontal">

        <TextView
            android:id="@id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/c8"
            android:textSize="@dimen/text24" />

        <View
            android:layout_width="@dimen/px1"
            android:layout_height="match_parent"
            android:background="@color/line" />

        <TextView
            android:id="@id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text24" />

    </LinearLayout>
</LinearLayout>