<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/px464"
    android:layout_height="@dimen/px312"
    android:background="@drawable/bg_white_raduis"
    android:gravity="center_horizontal"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <TextView
        android:id="@+id/dialog_input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px48"
        android:textColor="@color/c3"
        android:textSize="@dimen/text32"
        tools:text="添加家庭成员" />

    <EditText
        android:id="@+id/dialog_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px48"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/please_input_member_phone"
        android:lines="1"
        android:textColor="@color/c6"
        android:textColorHint="@color/cd5"
        android:textSize="@dimen/text24"
        android:singleLine="true"
        android:maxLines="1"
        tools:text="添加家庭成员" />

    <View
        style="@style/ItemLineStyle"
        android:layout_marginLeft="@dimen/px80"
        android:layout_marginTop="@dimen/px20"
        android:layout_marginRight="@dimen/px80" />


    <View
        style="@style/ItemLineStyle"
        android:layout_marginTop="@dimen/px50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/c8"
            android:textSize="@dimen/text24" />

        <View
            android:layout_width="@dimen/px1"
            android:layout_height="match_parent"
            android:background="@color/line" />

        <TextView
            android:id="@+id/dialog_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text24" />

    </LinearLayout>
</LinearLayout>